# croissant

./: .gitignore  README.md  dune-project
lib/: analyzer.ml  ast.ml  dune  lexer.mll  parser.mly
lib/analyzer/: dune  lexer.mll  parser.mly  typing.ml
lib/ast/: analyzer.ml  dune  lexer.mll  parser.mly  print.ml  syntax.ml  typecheck.ml
lib/eval/: dune
lib/syntax/: BinaryOperators.ml  Environments.ml  Expressions.ml  Literals.ml  Node.ml  Roots.ml  SourceFiles.ml  Statements.ml  Types.ml  UnaryOperators.ml  dune
test/: ast.ml  dune  test.🥐
test/ast/: dune  print.ml  typecheck.ml
test/ressources/: test.🥐
test/syntax/: TestBinaryOperators.ml  TestExpressions.ml  TestLiterals.ml  TestSourceFiles.ml  TestStatements.ml  TestSyntax.ml  TestTypes.ml  TestUnaryOperators.ml  dune
